Add a period at the end of all figure captions where missing.

--- a/00-app-presentation.Rmd
+++ b/00-app-presentation.Rmd
@@ -39,7 +39,7 @@ This book uses a series of applications as examples.
 `{hexmake}` is an application that has been designed to build hex logos.
 It's been built by Colin, and it serves two main purposes: it helps the creation of a logo, but mainly it serves as an example of some complex features you can use inside a `{shiny}` application (image manipulation, custom CSS, linking to an external database, save and restore, etc.).
 
-(ref:hexmakefront) The `{hexmake}` application
+(ref:hexmakefront) The `{hexmake}` application.
 
 ```{r 00-app-presentation-1, echo=FALSE, fig.cap="(ref:hexmakefront)", out.width="100%"}
 knitr::include_graphics("img/hexmake.png")
