--- a/07-step-by-step-design.Rmd
+++ b/07-step-by-step-design.Rmd
@@ -64,7 +64,7 @@ Drawing a concept map is a way to organize the knowledge of a specific topic.
 When doing this for a piece of software, we are not trying to add technical details about the way things are implemented: we are listing the various "actors" (the concepts) around our app, with the relationships they have.
 For example, Figure \@ref(fig:07-step-by-step-design-1) is a very simple concept map of the `{hexmake}` [@R-hexmake] app.
 
-(ref:hexmakeconceptmap) `{hexmake}` concept map, built with XMind (<https://www.xmind.net>)
+(ref:hexmakeconceptmap) `{hexmake}` concept map, built with XMind (<https://www.xmind.net>).
 
 ```{r 07-step-by-step-design-1, echo=FALSE, fig.cap="(ref:hexmakeconceptmap)", out.width="100%"}
 knitr::include_graphics("img/hexmakemap.png")
