--- a/09-prototyping.Rmd
+++ b/09-prototyping.Rmd
@@ -16,7 +16,7 @@ Getting things to work before trying to optimize the app is always a good approa
 > "One of the really nice things about running your program frequently is that you get to see it running, which is fun, ans that's what programming is all about."\
 > _The Unicorn Project_ [@genekim2019]
 
-(ref:mvp) Building a minimum viable product (MVP)
+(ref:mvp) Building a minimum viable product (MVP).
 
 ```{r 09-prototyping-1, echo=FALSE, fig.cap="(ref:mvp)", out.width="100%"}
 knitr::include_graphics("img/mvp.png")
@@ -106,14 +106,14 @@ library(shinipsum)
 library(ggplot2)
 ```
 
-(ref:randomplot1) A random plot
+(ref:randomplot1) A random plot.
 
 ```{r 09-prototyping-5, fig.cap="(ref:randomplot1)", out.width="100%"}
 random_ggplot() + 
   labs(title = "Random plot") 
 ```
 
-(ref:randomplot2) A random plot
+(ref:randomplot2) A random plot.
 
 ```{r 09-prototyping-6, fig.cap="(ref:randomplot2)", out.width="100%"}
 random_ggplot() + 
@@ -150,7 +150,7 @@ server <- function(input, output, session) {
 shinyApp(ui, server)
 ```
 
-(ref:shinipsum) An app built with `{shinipsum}`
+(ref:shinipsum) An app built with `{shinipsum}`.
 
 ```{r 09-prototyping-8, echo=FALSE, fig.cap="(ref:shinipsum)", out.width="100%"}
 knitr::include_graphics("img/shinipsumapp.png")
