--- a/14-when_optimize.Rmd
+++ b/14-when_optimize.Rmd
@@ -25,7 +25,7 @@ Only when you have your application ready can you really appreciate where your b
 When?
 Once the application is ready: here in our example, we can only detect the bottleneck once the full road is actually built, not while we are building the circle.
 
-(ref:bottleneck) Road bottleneck, from WikiMedia <https://commons.wikimedia.org/wiki/File:Roadway_section_with_bottleneck.png>
+(ref:bottleneck) Road bottleneck, from WikiMedia <https://commons.wikimedia.org/wiki/File:Roadway_section_with_bottleneck.png>.
 
 ```{r 14-when-optimize-1, echo=FALSE, fig.cap="(ref:bottleneck)", out.width="100%"}
 knitr::include_graphics("img/bottleneck.png")
@@ -198,7 +198,7 @@ Here is how to read this graph:
 
 -   Then, the third line details the calls made by `middle()`, which pauses, then calls `bottom_a()` and `bottom_b()`, which each `pause()` for a given amount of time.
 
-(ref:profvizflame) `{profvis}` flame graph
+(ref:profvizflame) `{profvis}` flame graph.
 
 ```{r 14-when-optimize-4, echo=FALSE, fig.cap="(ref:profvizflame)", out.width="100%"}
 knitr::include_graphics("img/profviz_flame.png")
@@ -206,7 +206,7 @@ knitr::include_graphics("img/profviz_flame.png")
 
 If you click on the "Data" tab, you will also find another view of the `flame graph`, where you can read the hierarchy of calls and the time and memory spent on each function call:
 
-(ref:profvizdata) `{profvis}` data tab
+(ref:profvizdata) `{profvis}` data tab.
 
 ```{r 14-when-optimize-5, echo=FALSE, fig.cap="(ref:profvizdata)", out.width="100%"}
 knitr::include_graphics("img/profviz_data.png")
@@ -290,7 +290,7 @@ Here, we have an empirical evidence that one code is faster than the other: by b
 
 If you want a graphical analysis, `{bench}` comes with an `autoplot` method for `{ggplot2}` [@R-ggplot2], as shown in Figure \@ref(fig:14-when-optimize-10):
 
-(ref:benchautoplot) `{bench}` autoplot
+(ref:benchautoplot) `{bench}` autoplot.
 
 ```{r 14-when-optimize-10, fig.cap="(ref:benchautoplot)", out.width="100%", warning = FALSE}
 ggplot2::autoplot(res)
@@ -355,7 +355,7 @@ knitr::include_graphics("img/lighthouse-audit.png")
 
 See Figure \@ref(fig:14-when-optimize-12) for a screenshot of the results computed by Google Lighthouse.
 
-(ref:lighthouseres) Lighthouse audit results
+(ref:lighthouseres) Lighthouse audit results.
 
 ```{r 14-when-optimize-12, echo=FALSE, fig.cap="(ref:lighthouseres)", out.width="100%"}
 knitr::include_graphics("img/lighthouse-audit-results.png")
