--- a/15-common-app-caveats.Rmd
+++ b/15-common-app-caveats.Rmd
@@ -623,7 +623,7 @@ For example, you will be able to see that the `observeEvent()` from `mod_main.R#
 
 The following screenshot shows what a `{whereami}` log might look like, here, for the `{hexmake}` application.
 
-(ref:whereami) `{whereami}` output for `{hexmake}`
+(ref:whereami) `{whereami}` output for `{hexmake}`.
 
 ```{r 15-common-app-caveats-13, echo=FALSE, fig.cap="(ref:whereami)", out.width="100%"}
 knitr::include_graphics("img/whereami.png")
@@ -631,7 +631,7 @@ knitr::include_graphics("img/whereami.png")
 
 And bonus, once the app is closed, you can get a list of all the "counters" with `whereami::counter_get()`, and how many times they each have been called, and `plot(whereami::counter_get())` will draw a raw plot of the various counters.
 
-(ref:whereamiplot) plot of `{whereami}` counters
+(ref:whereamiplot) plot of `{whereami}` counters.
 
 ```{r 15-common-app-caveats-14, echo=FALSE, fig.cap="(ref:whereamiplot)", out.width="100%"}
 knitr::include_graphics("img/plot_whereami.png")
