--- a/18-css.Rmd
+++ b/18-css.Rmd
@@ -15,19 +15,19 @@ Then, if you go on the extension and choose CSS, click "Disable All Style", to s
 
 For example, Figure \@ref(fig:18-css-1) is what [rtask.thinkr.fr](https://rtask.thinkr.fr) looks like with CSS, and Figure \@ref(fig:18-css-2) and Figure \@ref(fig:18-css-3) shows what it looks like without CSS.
 
-(ref:rtaskcss) <https://rtask.thinkr.fr> with CSS
+(ref:rtaskcss) <https://rtask.thinkr.fr> with CSS.
 
 ```{r 18-css-1, echo=FALSE, fig.cap="(ref:rtaskcss)", out.width="100%"}
 knitr::include_graphics("img/rtask_with_css.png")
 ```
 
-(ref:rtaskwithoutcss) <https://rtask.thinkr.fr> without CSS
+(ref:rtaskwithoutcss) <https://rtask.thinkr.fr> without CSS.
 
 ```{r 18-css-2, echo=FALSE, fig.cap="(ref:rtaskwithoutcss)", out.width="100%"}
 knitr::include_graphics("img/rtask_without_css.png")
 ```
 
-(ref:rtaskwithoutcss2) <https://rtask.thinkr.fr> without CSS
+(ref:rtaskwithoutcss2) <https://rtask.thinkr.fr> without CSS.
 
 ```{r 18-css-3, echo=FALSE, fig.cap="(ref:rtaskwithoutcss2)", out.width="100%"}
 knitr::include_graphics("img/rtask_without_css2.png")
@@ -66,7 +66,7 @@ server <- function(
 shinyApp(ui, server)
 ```
 
-(ref:nocssshiny) `{shiny}` without CSS
+(ref:nocssshiny) `{shiny}` without CSS.
 
 ```{r 18-css-5, echo=FALSE, fig.cap="(ref:nocssshiny)", out.width="100%"}
 knitr::include_graphics("img/no-css-shiny.png")
@@ -96,7 +96,7 @@ server <- function(
 shinyApp(ui, server)
 ```
 
-(ref:cssshiny) `{shiny}` with its default CSS
+(ref:cssshiny) `{shiny}` with its default CSS.
 
 ```{r 18-css-7, echo=FALSE, fig.cap="(ref:cssshiny)", out.width="100%"}
 knitr::include_graphics("img/css-shiny.png")
@@ -187,7 +187,7 @@ server <- function(
 shinyApp(ui, server)
 ```
 
-(ref:cssshinyred) `{shiny}` with a red title
+(ref:cssshinyred) `{shiny}` with a red title.
 
 ```{r 18-css-9, echo=FALSE, fig.cap="(ref:cssshinyred)", out.width="100%"}
 knitr::include_graphics("img/css-red.png")
@@ -226,7 +226,7 @@ server <- function(
 shinyApp(ui, server)
 ```
 
-(ref:cssshinyred2) `{shiny}` with a red title
+(ref:cssshinyred2) `{shiny}` with a red title.
 
 ```{r 18-css-11, echo=FALSE, fig.cap="(ref:cssshinyred2)", out.width="100%"}
 knitr::include_graphics("img/css-red.png")
