--- a/04-golem.Rmd
+++ b/04-golem.Rmd
@@ -519,7 +519,7 @@ server2:
 
 Using this configuration file, you can then deploy the very same app on the two servers, and configure what is going to be read by the application by setting an environment variable inside the RStudio Connect interface.
 
-(ref:envvarconnect) Setting an environment variable in RStudio Connect
+(ref:envvarconnect) Setting an environment variable in RStudio Connect.
 
 ```{r 04-golem-22, echo=FALSE, fig.cap="(ref:envvarconnect)", out.width='100%'}
 knitr::include_graphics("img/GOLEM_CONFIG_ACTIVE.png")
