--- a/19-appendix.Rmd
+++ b/19-appendix.Rmd
@@ -64,7 +64,7 @@ Cheers!
 
 \@ref(fig:19-appendix-1) is the concept map for this application, using Xmind.
 
-(ref:conceptmapminifyr) A concept map for the minifying application
+(ref:conceptmapminifyr) A concept map for the minifying application.
 
 ```{r 19-appendix-1, echo=FALSE, fig.cap="(ref:conceptmapminifyr)", out.width="100%"}
 knitr::include_graphics("img/minifyr-map.png")
@@ -297,7 +297,7 @@ Now, time to move this into a vignette!
 
 Let's start by drawing a small mockup of our front-end using [Excalidraw](https://excalidraw.com/).
 
-(ref:excalidraw) A mockup for the UI of our application, made with Excalidraw (<https://excalidraw.com/>)
+(ref:excalidraw) A mockup for the UI of our application, made with Excalidraw <https://excalidraw.com/>.
 
 ```{r 19-appendix-8, echo=FALSE, fig.cap="(ref:excalidraw)", out.width="100%"}
 knitr::include_graphics("img/excalidraw.png")
