--- a/00-app-presentation.Rmd
+++ b/00-app-presentation.Rmd
@@ -26,8 +26,7 @@ Of course, one of the key pillars holding the foundation of this book is the [`{
 As I was finishing my writing of this forward, my four-year-old son asked me, "why does `{golem}` create nice things Daddy?" Well, this book is easily the best way to explain that answer!
 I hope reading *Engineering Production-Grade Shiny Apps* helps you in your journey of creating large Shiny applications!
 
-> Eric Nantz 
-> Host of the R-Podcast and the Shiny Developer Series
+> Eric Nantz - Host of the R-Podcast and the Shiny Developer Series
 
 
 # Application presentation {.unnumbered}
