--- a/01-big-shiny.Rmd
+++ b/01-big-shiny.Rmd
@@ -1,6 +1,6 @@
 \mainmatter
 
-# (PART) Building Successful `{shiny}` Apps {.unnumbered}
+# (PART) Building Successful {shiny} Apps {.unnumbered}
 
 # About Successful `{shiny}` Apps {#successful-shiny-app}
 
@@ -28,7 +28,8 @@ Ready to start engineering production-grade `{shiny}` apps?
 ## What is a complex `{shiny}` application? {#complex-shiny}
 
 > One of the unfortunate things about reality is that it often poses complex problems that demand complex solutions.\
-> `r right_link("The Art of Unix Programming", "http://www.catb.org/~esr/writings/taoup/html/ch13s01.html")`
+> 
+> _The Art of Unix Programming_ [@ericraymond2003]
 
 ### Reaching the cliff of complexity
 
