--- a/03-structure.Rmd
+++ b/03-structure.Rmd
@@ -151,7 +151,8 @@ Being able to properly cut a codebase into small modules will help developers bu
 But what are `{shiny}` modules?
 
 > `{shiny}` modules address the namespacing problem in `{shiny}` UI and server logic, adding a level of abstraction beyond functions.\
-> `r right_link("Modularizing Shiny app code - shiny.rstudio.com", "https://shiny.rstudio.com/articles/modules.html")`
+> 
+> _Modularizing Shiny app code_ (<https://shiny.rstudio.com/articles/modules.html>)
 
 Let us first untangle this quote with an example about the `{shiny}` namespace problem.
 
@@ -921,7 +922,8 @@ And of course, in the long run, even developers with a knowledge of the structur
 > New engineers introduced to the growing chaos raise a warning flag and encourage the team to begin splitting up the code, but these concerns fall to deaf ears [...].
 > Eventually, the codebase reaches a critical mass where the persistent lack of organization has dramatically slowed productivity across the engineering team.
 > Only then does the team take the time to draft a plan for grooming the codebase, at which point the number of variables to consider is far greater than had they made a concerted effort to tackle the problem months (or even years) earlier.\
-> [@lemaire2020]
+> 
+> _Refactoring at Scale_ [@lemaire2020]
 
 Using a convention allows everyone to know where to look when debugging, refactoring, or implementing new features.
 For example, if you follow `{golem}`'s convention (which is the one developed in this section), you will know immediately that a file starting with `mod_` contains a module.
