--- a/05-workflow.Rmd
+++ b/05-workflow.Rmd
@@ -94,7 +94,8 @@ In this part, we will go through unit tests, reproducible development environmen
 Building a solid testing suite is crucial to the success of a project, as it allows a project to be stable in the long run, be it when you will want to add new feature or refactor existing code: 
 
 > Refactoring requires we be able to confidently ensure that behavior remains identical at every iteration. We can increase our confidence that nothing has changed by writing a suite of tests (unit, integration, end-to-end), and we should not seriously consider moving forward with any refactoring effort until we’ve established sufficient test coverage.  
-> [@lemaire2020]
+> 
+> _Refactoring at Scale_ [@lemaire2020]
 
 This step of the workflow will span over chapters. 
 
