--- a/06-ux-matters.Rmd
+++ b/06-ux-matters.Rmd
@@ -3,12 +3,8 @@
 # UX Matters {#ux-matters}
 
 Let's state the truth: no matter how complex and innovative your back-end is, your application is bad if your user experience (UX) is bad.
-That's the hard truth.
-
-We have a natural tendency, as R-coders, to be focused on the back-end, i.e. the server part of the application [^ux-matters-1] , which is perfectly normal---chances are you did not come to R to design front-ends [^ux-matters-2]
-.
-
-[^ux-matters-1]: e.g., what happens on the server side of a `{shiny}` app
+That's the hard truth. 
+We have a natural tendency, as R-coders, to be focused on the back-end, i.e. the server part of the application, which is perfectly normal---chances are you did not come to R to design front-ends [^ux-matters-2].
 
 [^ux-matters-2]: The front-end is the visual part of your application - the one your user interacts with - as opposed to the back-end, which is what is installed on the server, the part the end user does not see.
     In `{shiny}`, front-end corresponds to the UI, while back-end, to the server.
@@ -20,8 +16,9 @@ However, our natural back-end/server logic as R developers can play against us i
 
 ## Simplicity is gold
 
-> Simplify, then add lightness.\
-> `r right_link('Colin Chapman CBE, Founder of Lotus Cars', 'https://www.lotuscars.com/lotus-philosophy/')`
+> Simplify, then add lightness.
+> 
+> _Colin Chapman CBE, Founder of Lotus Cars_ (<https://www.lotuscars.com/lotus-philosophy/>)
 
 Aiming for simplicity is a hard thing, but some rules will help you build a better UX, paving the way for a successful application.
 
@@ -221,8 +218,9 @@ There is a good chance visitors of the app will already know what `{ggplot2}` is
 
 This rule is also known as "Principle of Least Astonishment."
 
-> Rule of Least Surprise: In interface design, always do the least surprising thing.\
-> 'The Art of UNIX Programming - Basic of the Unix Philosophy', [@ericraymond2003]
+> Rule of Least Surprise: In interface design, always do the least surprising thing.
+> 
+> _The Art of UNIX Programming_ [@ericraymond2003]
 
 When we are browsing the web, **we have a series of pre-conceptions about what things are and what they do**.
 For example, we expect an underline text to be clickable, so there is a good chance that if you use underlined text in your app, the user will try to click on it.
@@ -273,8 +271,9 @@ Same goes for the application failing or behaving in an unexpected way: most use
 
 > When users are astonished they usually assume that they have made a mistake; they are unlikely to realize that the page has astonished them.
 > They are more likely to feel that they are at fault for not anticipating the page.
-> Don't take advantage of this; making users feel stupid is not endearing.\
-> "The cranky user: The Principle of Least Astonishment" <https://www.ibm.com/developerworks/web/library/us-cranky10/us-cranky10-pdf.pdf">
+> Don't take advantage of this; making users feel stupid is not endearing.
+> 
+> _The cranky user: The Principle of Least Astonishment_ (<https://www.ibm.com/developerworks/web/library/us-cranky10/us-cranky10-pdf.pdf>)
 
 #### B. Thinking about progression {.unnumbered}
 
@@ -403,8 +402,9 @@ It is also possible to build your own with a little bit of HTML, CSS and JavaScr
 > Even more often (at least in the commercial software world) excessive complexity comes from project requirements that are based on the marketing fad of the month rather than the reality of what customers want or software can actually deliver.
 > Many a good design has been smothered under marketing's pile of "checklist features"---features that, often, no customer will ever use.
 > And a vicious circle operates; the competition thinks it has to compete with chrome by adding more chrome.
-> Pretty soon, massive bloat is the industry standard and everyone is using huge, buggy programs not even their developers can love.\
-> 'The Art of UNIX Programming - Basic of the Unix Philosophy', [@ericraymond2003]
+> Pretty soon, massive bloat is the industry standard and everyone is using huge, buggy programs not even their developers can love.
+> 
+> _The Art of UNIX Programming_ [@ericraymond2003]
 
 Feature-creep is the process of **adding features to the app that complicate the usage and the maintenance of the product, to the point that extreme feature-creep can lead to the product being entirely unusable and completely impossible to maintain**.
 This movement always starts well-intentioned: easier navigation, more information, more visualizations, modifiable elements, and so on and so forth.
@@ -420,9 +420,9 @@ What is the point of having one big app for these three different tasks?
 Splitting this project into three smaller apps will keep you from having a large app which is harder to maintain, and that might not perform as well.
 Indeed, if you put everything into the same app, you will have to add extra mechanisms to prevent the admin panel from loading if your user simply wants to go to the extraction step, and inversely, a user visiting the admin panel probably does not need the extraction and analysis back-end to be loaded when they simply want to browse the way other users have been using the app.
 
-Or, as simply put in *The Art of Unix Programming* [@ericraymond2003]:
-
 > Rule of Parsimony: Write a big program only when it is clear by demonstration that nothing else will do.
+> 
+> _The Art of UNIX Programming_ [@ericraymond2003]
 
 But let's focus on a smaller scope, and think about some things that can be thought of as feature-creeping your `{shiny}` app.
 
@@ -488,8 +488,9 @@ Adding interactivity widgets (in most cases) means adding visual elements to you
 
 To sum up, a good rule to live by is that you should not add a feature for the sake of adding a feature.
 
-> Less is more.\
-> `r right_link("Ludwig Mies van der Rohe", "http://www.masterofdetails.fr/mies-van-der-rohe-less-is-more/")`
+> Less is more.
+>
+> _Ludwig Mies van der Rohe_ (<http://www.masterofdetails.fr/mies-van-der-rohe-less-is-more/>)
 
 ## Web accessibility
 
@@ -502,8 +503,9 @@ Web accessibility deals with the process of making the web available to people w
 [^ux-matters-7]: And of course, other type of disabilities.
 
 > The Web is fundamentally designed to work for all people, whatever their hardware, software, language, location, or ability.
-> When the Web meets this goal, it is accessible to people with a diverse range of hearing, movement, sight, and cognitive ability.\
-> `r right_link("Accessibility in Context - The Web Accessibility Initiative", "https://www.w3.org/WAI/fundamentals/accessibility-intro/")`
+> When the Web meets this goal, it is accessible to people with a diverse range of hearing, movement, sight, and cognitive ability.
+> 
+> _Accessibility in Context - The Web Accessibility Initiative_ (<https://www.w3.org/WAI/fundamentals/accessibility-intro/>)
 
 When learning to code a web app through "canonical" courses, you will be introduced to web accessibility very early.
 For example, you can learn about this straight from the first chapter of [learn.freecodecamp.org](https://learn.freecodecamp.org/).
