--- a/09-prototyping.Rmd
+++ b/09-prototyping.Rmd
@@ -4,16 +4,17 @@
 
 ### Prototype, then polish
 
-> Prototyping first may help keep you from investing far too much time for marginal gains.\
-> _The Art of Unix Programming_ [@ericraymond2003]
+> Prototyping first may help keep you from investing far too much time for marginal gains.
+> 
+> _The Art of UNIX Programming_ [@ericraymond2003]
 
 And yet another rule from _The Art of Unix Programming_: "Rule of Optimization: Prototype before polishing. **Get it working before you optimize it**."
-
 Getting things to work before trying to optimize the app is always a good approach:
 
 -   **Making things work before working on low-level optimization makes the whole engineering process easier**: having a "minimal viable product" that works, even if slowly and not perfectly, gives a stronger sense of success to the project. For example if you are building a vehicle, it feels more of a success to start with a skateboard than with a wheel: you quickly have a product that can be used to move, not waiting for the end of the project before finally having something useful. Building a skateboard helps the developer maintain a sense of accomplishment throughout the life of the project: the quicker you can have a running program, the better.
 
-> "One of the really nice things about running your program frequently is that you get to see it running, which is fun, ans that's what programming is all about."\
+> One of the really nice things about running your program frequently is that you get to see it running, which is fun, ans that's what programming is all about.
+> 
 > _The Unicorn Project_ [@genekim2019]
 
 (ref:mvp) Building a minimum viable product (MVP).
@@ -27,8 +28,9 @@ knitr::include_graphics("img/mvp.png")
 > Once you master these functions, you'll find it takes much less time to solve iteration problems.
 > But you should never feel bad about using a for loop instead of a map function.
 > The map functions are a step up a tower of abstraction, and it can take a long time to get your head around how they work.
-> The important thing is that you solve the problem that you're working on, not write the most concise and elegant code (although that's definitely something you want to strive towards!).\
-> *R for Data Science - 21.5 The map functions* [@hadleywickham2017]
+> The important thing is that you solve the problem that you're working on, not write the most concise and elegant code (although that's definitely something you want to strive towards!).
+> 
+> _R for Data Science - 21.5 The map functions_ [@hadleywickham2017]
 
 As a small example, we can refer to the binding module from `{hexmake}` [@R-hexmake]: this module manipulates namespaces, inputs, and `session` to automatically bind inputs to the R6 object containing the image (see implementation [here](https://github.com/ColinFay/hexmake/blob/master/R/mod_binder.R#L29), [here](https://github.com/ColinFay/hexmake/blob/master/R/utils_server.R#L2) and [here](https://github.com/ColinFay/hexmake/blob/master/R/mod_left.R#L60)).
 That's an elegant solution: instead of duplicating content, we use functions to automatically bind events.
