--- a/11-step-by-step-secure.Rmd
+++ b/11-step-by-step-secure.Rmd
@@ -9,8 +9,9 @@ try({
 
 # Build Yourself a Safety Net {#build-yourself-safety-net}
 
-> Don't fuck over Future You\
-> `r right_link('JD', 'https://twitter.com/CMastication')`
+> Don't fuck over Future You
+> 
+> _JD_ (<https://twitter.com/CMastication>)
 
 Strengthening your app means two things: testing and locking the application environment.
 
@@ -839,8 +840,9 @@ That means that you can have `{geojsonsf}` version `1.2.1` in one of your projec
 
 #### B. Using `{renv}` {.unnumbered}
 
-> Underlying the philosophy of renv is that any of your existing workflows should just work as they did before.\
-> `r right_link("Introduction to renv", "https://rstudio.github.io/renv/articles/renv.html")`
+> Underlying the philosophy of renv is that any of your existing workflows should just work as they did before.
+> 
+> _Introduction to renv_ (<https://rstudio.github.io/renv/articles/renv.html>)
 
 The first thing to do with `{renv}` is initiate it with the `init()` function.
 
