--- a/13-deploy.Rmd
+++ b/13-deploy.Rmd
@@ -2,8 +2,9 @@
 
 # Deploy Your Application {#deploy}
 
-> Your deploys should be as boring, straightforward, and stress-free as possible.\
-> `r right_link("How to Deploy Software - Zach Holman","https://zachholman.com/posts/deploying-software")`
+> Your deploys should be as boring, straightforward, and stress-free as possible.
+> 
+> _How to Deploy Software - Zach Holman_ (<https://zachholman.com/posts/deploying-software>)
 
 Once your app is built, you are ready to deploy it!
 In other words, your software is now ready to be used by other users.
