--- a/15-common-app-caveats.Rmd
+++ b/15-common-app-caveats.Rmd
@@ -657,7 +657,8 @@ Here are three strategies to code without `uiOutput()` and `renderUI()`.
 #### A. Implement UI events in JavaScript {.unnumbered}
 
 > Mixing languages is better than writing everything in one, if and only if using only that one is likely to overcomplicate the program.\
-> "Applying the Unix Philosophy" - The Art of Unix Programming [@ericraymond2003]
+> 
+> _The Art of UNIX Programming_ [@ericraymond2003]
 
 We will see in the last chapter of this book how you can integrate JS inside your `{shiny}` app, and how even basic functions can be useful for making your app server smaller.
 For example, compare:
