--- a/16-optimizing-shiny-code.Rmd
+++ b/16-optimizing-shiny-code.Rmd
@@ -183,7 +183,7 @@ res_c <- m_get_query(
 )
 # The random directory now contains two objects, 
 # one for each memoized call
-fs::dir_tree(tpd)
+fs::dir_tree(random_dir)
 ```
 
 As you can see, we now have two cache objects inside the directory we have specified as a `cache_filesystem`.
