--- a/04-golem.Rmd
+++ b/04-golem.Rmd
@@ -131,12 +131,14 @@ Note also that this folder must not contain any sub-folders.
 ``` {.r}
 #' Access files in the current app
 #' 
-#' NOTE: If you manually change your package name in the DESCRIPTION, 
-#' don't forget to change it here too, and in the config file. 
-#' For a safer name change mechanism, use the `golem::set_golem_name()` function.
+#' NOTE: If you manually change your package 
+#' name in the DESCRIPTION, don't forget to change it here too,
+#' and in the config file. For a safer name change mechanism, 
+#' use the `golem::set_golem_name()` function.
 #' 
 #' @param ... character vectors, specifying subdirectory and file(s) 
-#' within your package. The default, none, returns the root of the app. 
+#' within your package. 
+#' The default, none, returns the root of the app.
 #' 
 #' @noRd
 app_sys <- function(...){
@@ -147,9 +149,10 @@ app_sys <- function(...){
 #' Read App Config
 #' 
 #' @param value Value to retrieve from the config file. 
-#' @param config GOLEM_CONFIG_ACTIVE value. If unset, R_CONFIG_ACTIVE. 
-#' If unset, "default".
-#' @param use_parent Logical, scan the parent directory for config file.
+#' @param config GOLEM_CONFIG_ACTIVE value. 
+#' If unset, R_CONFIG_ACTIVE.  If unset, "default".
+#' @param use_parent Logical, 
+#' scan the parent directory for config file.
 #' 
 #' @noRd
 get_golem_config <- function(
@@ -331,52 +334,6 @@ Here are some examples of what you can pass to your shiny application using this
 #### app\_config.R {.unnumbered}
 
 Inside the `R/` folder is the `app_config.R` file.
-
-``` {.r}
-#' Access files in the current app
-#' 
-#' NOTE: If you manually change your package name in the DESCRIPTION, 
-#' don't forget to change it here too, and in the config file. 
-#' For a safer name change mechanism, use the `golem::set_golem_name()` function.
-#' 
-#' @param ... character vectors, specifying subdirectory and file(s) 
-#' within your package. The default, none, returns the root of the app. 
-#' 
-#' @noRd
-app_sys <- function(...){
-  system.file(..., package = "golex")
-}
-
-
-#' Read App Config
-#' 
-#' @param value Value to retrieve from the config file. 
-#' @param config GOLEM_CONFIG_ACTIVE value. If unset, R_CONFIG_ACTIVE. 
-#' If unset, "default".
-#' @param use_parent Logical, scan the parent directory for config file.
-#' 
-#' @noRd
-get_golem_config <- function(
-  value, 
-  config = Sys.getenv(
-    "GOLEM_CONFIG_ACTIVE", 
-    Sys.getenv(
-      "R_CONFIG_ACTIVE", 
-      "default"
-    )
-  ), 
-  use_parent = TRUE
-){
-  config::get(
-    value = value, 
-    config = config, 
-    # Modify this if your config file is somewhere else:
-    file = app_sys("golem-config.yml"), 
-    use_parent = use_parent
-  )
-}
-```
-
 This file is designed to handle two things:
 
 -   `app_sys()` is a wrapper around `system.file(package = "golex")`, and allows you to quickly refer to the files inside the `inst/` folder.
