--- a/07-step-by-step-design.Rmd
+++ b/07-step-by-step-design.Rmd
@@ -5,7 +5,8 @@
 > You have to believe that software design is a craft worth all the intelligence, creativity, and passion you can muster.
 > Otherwise you will not look past the easy, stereotyped ways of approaching design and implementation; **you will rush into coding when you should be thinking**.
 > You'll carelessly complicate when you should be relentlessly simplifying---and you'll wonder why your code bloats and debugging is so hard.\
-> "The Art of Unix Programming - Attitude Matters Too", [@ericraymond2003] (Our bold.)
+> 
+> _The Art of UNIX Programming_ [@ericraymond2003] (Our bold.)
 
 ### The urge to code
 
@@ -130,8 +131,9 @@ On top of that, remember all these things we saw in the last chapter about acces
 The persona is a concept borrowed from design and marketing that refers to fictional characters that will serve as a user type.
 In other words**, a persona is a character that represents the "typical" behavior and traits for a group of users that will interact with your product**.
 
-> A persona consists of a description of a fictional person who represents an important customer or user group for the product, and typically presents information about demographics, behavior, product usage, and product-related goals, tasks, attitudes, etc.\
-> "Quantitative Evaluation of Personas as Information" [@Chapman2008]
+> A persona consists of a description of a fictional person who represents an important customer or user group for the product, and typically presents information about demographics, behavior, product usage, and product-related goals, tasks, attitudes, etc.
+> 
+> _Quantitative Evaluation of Personas as Information_ [@Chapman2008]
 
 Using personas during the design process helps you center your focus on the end user, so that you know who you are creating the application for.
 Then, while building your application, you can think about how each persona will interact with a given feature: Will they use it?
@@ -142,7 +144,8 @@ Will they find this useful?
 Asking these kinds of questions helps you take a step back from feature implementation and re-focus on what matters: we are building application for someone else, who will eventually use it.
 
 > The benefits of personas are that they enable designers to envision the end user's needs and wants, remind designers that their own needs are not necessarily the end users' needs, and provide an effective communication tool, which facilitates better design decisions.\
-> "Creating and Using Personas in Software Development: Experiences from Practice" [@Billestrup2014]
+> 
+> _Creating and Using Personas in Software Development: Experiences from Practice_ [@Billestrup2014]
 
 The building of these personas is made easier once you have interacted with the end users, as we suggested in the previous section.
 Given the answers to these questions, you will be able to draw some common characteristics about the future users of your application.
@@ -156,8 +159,9 @@ From time to time, you are building a `{shiny}` app on top of an existing code-b
 These kinds of projects are often referred to as "brownfield projects", in opposition to "greenfield projects", borrowing the terminology from urban planning: **a greenfield project being one where you are building on "evergreen" lands, while a brownfield project is building on lands that were, for example, industrial lands, and which will need to be sanitized, as they potentially contain waste or pollution, constructions need to be destroyed, roads needs to be deviated, and all these things that can make the urban planning process more complex**.
 Then, you can extend this to software engineering, where a greenfield project is the one that you start from scratch, and a brownfield project is one where you need to build on top of an existing code-base, implying that you will need to do some extra work before actually working on the project.
 
-> When transforming brownfield projects, we may face significant impediments and problems, especially when no automated testing exists, or when there is a tightly-coupled architecture that prevents small teams from developing, testing, and deploying code independently.\
-> "The DevOps Handbook: How to Create World-Class Agility, Reliability, and Security in Technology Organizations" [@genekim2016]
+> When transforming brownfield projects, we may face significant impediments and problems, especially when no automated testing exists, or when there is a tightly-coupled architecture that prevents small teams from developing, testing, and deploying code independently.
+> 
+> _The DevOps Handbook_ [@genekim2016]
 
 Depending on how you chose to handle it, starting from a codebase that is already written can either be very much helping, or you can be shooting yourself in the foot.
 Most of the time, `{shiny}` projects are not built as reproducible infrastructures: you will find a series of `library()` calls, no functions structure *per se*, no documentation, and no tests.
