--- a/17-javascript.Rmd
+++ b/17-javascript.Rmd
@@ -226,7 +226,8 @@ The `jQuery` framework is natively included in `{shiny}`.
 
 > jQuery is a fast, small, and feature-rich JavaScript library.
 > It makes things like HTML document traversal and manipulation, event handling, animation, and Ajax much simpler with an easy-to-use API that works across a multitude of browsers.\
-> `r right_link("jQuery home page", "https://jquery.com/")`
+> 
+> _jQuery home page_ (<https://jquery.com>)
 
 `jQuery` is a very popular JavaScript library which is designed to manipulate the DOM, its events, and its elements.
 It can be used to do a lot of things, like hide and show objects, change object classes, click somewhere, etc.
